[package]
name = "asyncapiv3"
version = "0.1.0"
edition = "2021"
authors = ["Davide Ghilardi <dghila@d71.dev>"]

description = "Asyncapi v3 types and utilities"
keywords = [ "asyncapi", "v3" ]
repository = "https://github.com/dghilardi/asyncapiv3"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = "0.8.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.112"
